게이트서버에 echo 메세지 등록 테스트, 패킷 아이디 열거형으로 수정

--- a/GateServer/GateServer.vcxproj
+++ b/GateServer/GateServer.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="ClientSession.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PacketHandlers.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClientSession.h" />
