--- a/GateServer/GateServer.vcxproj.filters
+++ b/GateServer/GateServer.vcxproj.filters
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ClientSession.cpp" />
+    <ClCompile Include="PacketHandlers.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClientSession.h" />
