게이트 패킷 핸들러 부분 추가, 서버 세션 만드는 중

--- a/GateServer/GateServer.vcxproj
+++ b/GateServer/GateServer.vcxproj
@@ -20,11 +20,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ClientSession.cpp" />
+    <ClCompile Include="GatePacketHandler.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="PacketHandlers.cpp" />
+    <ClCompile Include="ServerManager.cpp" />
+    <ClCompile Include="ServerSession.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClientSession.h" />
+    <ClInclude Include="GatePacketHandler.h" />
+    <ClInclude Include="ServerManager.h" />
+    <ClInclude Include="ServerSession.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ServerCommon\ServerCommon.vcxproj">
