--- a/ServerCoreLibrary/ServerCoreLibrary.vcxproj
+++ b/ServerCoreLibrary/ServerCoreLibrary.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ConfigReader.cpp" />
     <ClCompile Include="IocpCore.cpp" />
     <ClCompile Include="Listener.cpp" />
     <ClCompile Include="NetworkManager.cpp" />
@@ -29,6 +30,7 @@
     <ClCompile Include="SessionManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ConfigReader.h" />
     <ClInclude Include="IocpContext.h" />
     <ClInclude Include="IocpCore.h" />
     <ClInclude Include="Listener.h" />
@@ -38,6 +40,7 @@
     <ClInclude Include="RingBuffer.h" />
     <ClInclude Include="Session.h" />
     <ClInclude Include="SessionManager.h" />
+    <ClInclude Include="SessionType.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
