로그인 및 채팅 패킷 구현, 테스트 클라이언트

--- a/GameServer/GameServer.vcxproj
+++ b/GameServer/GameServer.vcxproj
@@ -20,11 +20,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommandManager.h" />
+    <ClInclude Include="CUnitPC.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="GamePacketHandler.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandManager.cpp" />
+    <ClCompile Include="CUnitPC.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GamePacketHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp" />
