--- a/GameServer/GameServer.vcxproj.filters
+++ b/GameServer/GameServer.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClCompile Include="CommandManager.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="CUnitPC.cpp" />
+    <ClCompile Include="GameDispatcher.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -23,5 +24,6 @@
     <ClInclude Include="CommandManager.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="CUnitPC.h" />
+    <ClInclude Include="GameDispatcher.h" />
   </ItemGroup>
 </Project>
