--- a/ServerCommon/ServerCommon.vcxproj
+++ b/ServerCommon/ServerCommon.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Types.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
